Fix navbar toggle height on mobile

--- a/src/site.scss
+++ b/src/site.scss
@@ -128,7 +128,7 @@ body {
   padding-bottom: 40px;
   background-color: #ececec;
   max-width: 1440px;
-  
+
   .project-col {
     margin: 15px auto;
   }
@@ -197,5 +197,11 @@ body {
 
   to {
     opacity: 1;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar {
+    height: auto;
   }
 }
